--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="">
     <nav >
         <ul>
-            <li >Countries</li>
+            <li >Nations</li>
             <li>
                 <div class="input-wrapper">
                     <i class="fa-solid fa-magnifying-glass"></i>
